# colombian-news-nlp-analysis

./: .gitattributes  README.md  motivation.txt  pyproject.toml
data/scrapping_elcolombiano/: scraper_full.py  scrapper_columnistas_selenium.py  scrapping.ipynb  scrapping_columnosta.py  scrapping_one_new.py  utils_scrapping.py
data/scrapping_elcolombiano/data/: ElColombiano_Estatico.csv
data/scrapping_espectador/: El_Espectador.ipynb  main_function.py
data/scrapping_espectador/data/: noticias_elespectador (1).xlsx
data/scrapping_semana/: semana_news_scrapper.ipynb
data/scrapping_semana/data/: scrapping_data.py
src/corpus_analisis/: visual_analisis.ipynb  visualization_functions.py
src/embeddings/: bow.py  embeddings.py  tf_idf.py
src/modeling/: clasification_models.py  ner.py  sentiment_analisis.py  sentimet_utils.py  training_models.ipynb
src/preprocesing/: main_preprocessing.py
